[project]
name = "sproutcex"
version = "0.1.0"
authors = [{ name = "Jan Lohse" }]
description = "Learn omega-automata using SproutCEX from smallest counterexamples."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["graphviz>=0.21",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1",
    "ruff>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/JanLohse/spectral_film_lut"
Issues = "https://github.com/JanLohse/spectral_film_lut/issues"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = ["I", "E"]
extend-fixable = ["I", "E"]
